[project]
name = "dualey-hmarl-traffic-control"
version = "3.0.0"
description = "DualEye H-MARL: Bangalore-specific multi-intersection traffic signal optimization environment"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
